# fastapi-boilerplate-code

./: .env  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: config.py  correlation.py  exceptions.py  logging_config.py
app/dependencies/: rate_limit.py
app/middlewares/: correlation.py  jwt_auth.py  logging.py
app/models/: base.py  user.py
app/routers/: __init__.py  cache.py  health.py  messages.py  search.py  users.py
app/schemas/: user.py
app/services/auth/: jwt.py
app/services/cache/: redis_cache.py
app/services/database/: mysql.py
app/services/messaging/: connection.py  rabbitmq_consumer.py  rabbitmq_producer.py
app/services/search/: opensearch_client.py
app/services/secrets/: aws_secrets.py
app/utils/: pii.py
fast_api_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: generate_jwt.py
